--- a/src/main/resources/skullition/scene.fxml
+++ b/src/main/resources/skullition/scene.fxml
@@ -16,5 +16,12 @@
     <children>
         <Button fx:id="loadFileButton" onAction="#loadFile" text="Load Excel File" GridPane.columnIndex="1" />
         <Button fx:id="makePdfButton" text="Make PDF" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <TableView prefHeight="200.0" prefWidth="200.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="C1" />
+          <TableColumn prefWidth="75.0" text="C2" />
+        </columns>
+      </TableView>
+      <Label alignment="CENTER" text="No File Selected" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
     </children>
 </GridPane>
