--- a/src/main/resources/skullition/scene.fxml
+++ b/src/main/resources/skullition/scene.fxml
@@ -5,7 +5,7 @@
 
 <GridPane fx:id="gridPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
           prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea"
-          xmlns:fx="http://javafx.com/fxml/1" fx:controller="skullition.UI.FXMLController">
+          xmlns:fx="http://javafx.com/fxml/1" fx:controller="skullition.FXMLController">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
