--- a/src/main/resources/skullition/scene.fxml
+++ b/src/main/resources/skullition/scene.fxml
@@ -14,8 +14,8 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <Button fx:id="loadFileButton" onAction="#loadFile" text="Load Excel File" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-    <Button fx:id="makePdfButton" text="Make PDF" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-    <TableView prefHeight="200.0" prefWidth="200.0">
+    <Button fx:id="makePdfButton" onAction="#makePdf" text="Make PDF" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+    <TableView fx:id="tableView" prefHeight="200.0" prefWidth="200.0">
       <columns>
           <TableColumn prefWidth="75.0" text="C1" />
           <TableColumn prefWidth="75.0" text="C2" />
