Finish TableView implementation and re-add log4j dependency

--- a/src/main/resources/skullition/scene.fxml
+++ b/src/main/resources/skullition/scene.fxml
@@ -13,8 +13,12 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
+   <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.rowSpan="2">
+      <children>
+          <TableView fx:id="tableView" prefHeight="200.0" prefWidth="200.0" />
+      </children>
+   </StackPane>
     <Button fx:id="loadFileButton" onAction="#loadFile" text="Load Excel File" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
     <Button fx:id="makePdfButton" onAction="#makePdf" text="Make PDF" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-    <TableView fx:id="tableView" prefHeight="200.0" prefWidth="200.0" />
-    <Label fx:id="fileNameLabel" alignment="CENTER" text="No File Selected" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+    <Label fx:id="fileNameLabel" alignment="CENTER" text="No File Selected" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
 </GridPane>
