--- a/src/main/resources/skullition/scene.fxml
+++ b/src/main/resources/skullition/scene.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
@@ -13,12 +14,22 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
-   <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.rowSpan="2">
+   <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowSpan="2">
       <children>
           <TableView fx:id="tableView" prefHeight="200.0" prefWidth="200.0" />
       </children>
    </StackPane>
-    <Button fx:id="loadFileButton" onAction="#loadFile" text="Load Excel File" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-    <Button fx:id="makePdfButton" onAction="#makePdf" text="Make PDF" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
     <Label fx:id="fileNameLabel" alignment="CENTER" text="No File Selected" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <children>
+          <Button fx:id="loadFileButton" onAction="#loadFile" text="Load Excel File">
+            <HBox.margin>
+               <Insets right="10.0" />
+            </HBox.margin></Button>
+          <Button fx:id="makePdfButton" onAction="#makePdf" text="Make PDF" />
+      </children>
+      <padding>
+         <Insets right="1.0" />
+      </padding>
+   </HBox>
 </GridPane>
